@@ -1,22 +1,34 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+#!/usr/bin/perl
+
+use strict;
+use warnings;
+use 5.006;
+
 use ExtUtils::MakeMaker;
-WriteMakefile
-(
-          'NAME' => 'CPAN::Mini::Tested',
-          'VERSION_FROM' => 'lib/CPAN/Mini/Tested.pm',
-          'PREREQ_PM' => {
-                           'CPAN::Mini' => '0.32',
-                           'Cache::Simple::TimedExpiry' => '0.22',
-                           'DBD::SQLite' => '1',
-                           'DBI' => '0',
-                           'File::Basename' => '0',
-                           'File::Spec::Functions' => '0',
-                           'LWP::Simple' => '0',
-                           'Regexp::Assemble' => '0.06',
-                           'Test::More' => '0',
-                           'base' => '0'
-                         },
-          'INSTALLDIRS' => 'site',
-          'PL_FILES' => {}
-        )
-;
+
+WriteMakefile(
+    AUTHOR              => 'Barbie <barbie@cpan.org>',
+    NAME                => 'CPAN::Mini::Tested',
+    VERSION_FROM        => 'lib/CPAN/Mini/Tested.pm',
+    ABSTRACT            => 'Create a CPAN mirror using modules with passing test reports',
+    NO_META             => 1,
+    PREREQ_PM           => {
+
+        # prereqs
+        'base'                          => '0'
+        'Cache::Simple::TimedExpiry'    => '0.22',
+        'CPAN::Mini'                    => '0.32',
+        'Config'                        => '0',
+        'DBD::SQLite'                   => '1',
+        'DBI'                           => '0',
+        'File::Basename'                => '0',
+        'File::Spec::Functions'         => '0',
+        'LWP::Simple'                   => '0',
+        'Regexp::Assemble'              => '0.06',
+
+        # build/test prereqs
+        'IO::File'                      => '0',
+        'Test::More'                    => '0.70'
+
+    }
+);
